Fix styling of error message on smaller screen

--- a/src/components/core/Textfield/index.module.css
+++ b/src/components/core/Textfield/index.module.css
@@ -29,6 +29,8 @@
 
 .error {
     height: 1.5rem;
+    width: 20rem;
     color: var(--dark-red);
     font-size: 0.8rem;
+    text-align: center;
 }
